Fixing OCD issues

--- a/index.html
+++ b/index.html
@@ -80,13 +80,9 @@ title: Home
 <div class="full-width speaker-section">
   <div class="row">
     <div class="large-12 columns">
-      <h2>Speakers</h2>
-<!--       <h4>We'll let you get to know these four before releasing the next bunch.<br>More to come!</h4>
- -->      
-        <a href="request-for-proposal" class="medium button button-center signup alt">Speaker RFP</a>
-      
-      
-      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+      <h2>Speakers</h2>     
+      <a href="request-for-proposal" class="medium button button-center signup alt">Speaker RFP</a> 
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
         <li class="center">
           <figure class="speaker">
             <div class="avatar">
@@ -164,8 +160,16 @@ title: Home
             <figcaption class="speaker-title">UX Design Lead at Amazon</figcation>
           </figure>
         </li>
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar blank"> 
+              <img src="/img/coming-soon.png" alt="Coming Soon!">
+            </div>
+          </figure>
+        </li>
       </ul>
     </div>
+    <h4>We'll let you get to know these five before releasing the next bunch.<br>More to come!</h4>
   </div>
 
 
@@ -183,7 +187,7 @@ title: Home
     <div class="large-12 columns">
       <h2>Sponsors</h2>
       <a href="#" data-reveal-id="secondModal" class="medium button button-center signup alt">Sponsor Packet</a>
-      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-4">
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
 
         <li class="center">
           <figure class="sponsor">
@@ -246,6 +250,14 @@ title: Home
                 <a href="http://noom.com" class="link-icon" target="_blank">Website</a>
               </div>
               <img src="/img/noom-logo.png" alt="Snappy">
+            </div>
+          </figure>
+        </li>
+
+        <li class="center">
+          <figure class="sponsor">
+            <div class="avatar">
+              <img src="/img/coming-soon-sponsor.png" alt="Coming Soon Sponsor">
             </div>
           </figure>
         </li>
