--- a/index.html
+++ b/index.html
@@ -165,10 +165,15 @@ title: Home
             <div class="avatar blank"> 
               <img src="/img/coming-soon.png" alt="Coming Soon!">
             </div>
+            <br>
+            <figcaption>TBA</figcaption>
+            <figcaption class="speaker-title">Level Up Speaker</figcation>
           </figure>
         </li>
       </ul>
     </div>
+    <br>
+    <hr>
     <h4>We'll let you get to know these five before releasing the next bunch.<br>More to come!</h4>
   </div>
 
