Added AIGA & Andres

--- a/index.html
+++ b/index.html
@@ -162,6 +162,21 @@ title: Home
         </li>
         <li class="center">
           <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/zertosh" class="twitter-icon" target="_blank">@zertosh</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://zertosh.com" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/andres-suarez.jpg" alt="Andres Suares">
+            </div>
+            <br>
+            <figcaption>Andres Suares</figcaption>
+            <figcaption class="speaker-title">Frontend Engineer at SoundCloud</figcation>
+          </figure>
+        </li>
+        <!-- <li class="center">
+          <figure class="speaker">
             <div class="avatar blank"> 
               <img src="/img/coming-soon.png" alt="Coming Soon!">
             </div>
@@ -169,7 +184,7 @@ title: Home
             <figcaption>TBA</figcaption>
             <figcaption class="speaker-title">Level Up Speaker</figcation>
           </figure>
-        </li>
+        </li> -->
       </ul>
     </div>
     <br>
@@ -262,10 +277,23 @@ title: Home
         <li class="center">
           <figure class="sponsor">
             <div class="avatar">
-              <img src="/img/coming-soon-sponsor.png" alt="Coming Soon Sponsor">
+              <div class="sponsor-links">
+                <a href="https://twitter.com/AIGAUPSTNY" class="twitter-icon" target="_blank">@AIGAUPSTNY</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://upstatenewyork.aiga.org" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/aiga-upstate-ny-logo.png" alt="AIGA Upstate New York">
             </div>
           </figure>
         </li>
+
+        <!-- <li class="center">
+          <figure class="sponsor">
+            <div class="avatar">
+              <img src="/img/coming-soon-sponsor.png" alt="Coming Soon Sponsor">
+            </div>
+          </figure>
+        </li> -->
 
       </ul>
     </div>
