Updating the speaker count to match the number of speakers shown.

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ title: Home
     </div>
     <br>
     <hr>
-    <h4>We'll let you get to know these five before releasing the next bunch.<br>More to come!</h4>
+    <h4>We'll let you get to know these six before releasing the next bunch.<br>More to come!</h4>
   </div>
 
 
