Added INOC to sponsors

--- a/index.html
+++ b/index.html
@@ -287,13 +287,26 @@ title: Home
           </figure>
         </li>
 
-        <!-- <li class="center">
+        <li class="center">
+          <figure class="sponsor">
+            <div class="avatar">
+              <div class="sponsor-links none">
+                <!-- <a href="" class="twitter-icon" target="_blank"></a> -->
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://www.inoc.net" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/inoc-logo.png" alt="Independent Network Operations Consortium">
+            </div>
+          </figure>
+        </li>
+
+        <li class="center">
           <figure class="sponsor">
             <div class="avatar">
               <img src="/img/coming-soon-sponsor.png" alt="Coming Soon Sponsor">
             </div>
           </figure>
-        </li> -->
+        </li>
 
       </ul>
     </div>
