Changes Suares to Suarez doh!

--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@ title: Home
                 <img src="/img/lu-icon.png" class="lu-icon">
                 <a href="http://zertosh.com" class="link-icon" target="_blank">Website</a>
             </div>
-              <img src="/img/andres-suarez.jpg" alt="Andres Suares">
+              <img src="/img/andres-suarez.jpg" alt="Andres Suarez">
             </div>
             <br>
-            <figcaption>Andres Suares</figcaption>
+            <figcaption>Andres Suarez</figcaption>
             <figcaption class="speaker-title">Frontend Engineer at SoundCloud</figcation>
           </figure>
         </li>
