--- a/index.html
+++ b/index.html
@@ -252,6 +252,19 @@ title: Home
           <figure class="sponsor">
             <div class="avatar">
               <div class="sponsor-links">
+                <a href="https://twitter.com/nvite" class="twitter-icon" target="_blank">@nvite</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://nvite.com" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/nvite-logo.png" alt="nvite">
+            </div>
+          </figure>
+        </li>
+
+        <li class="center">
+          <figure class="sponsor">
+            <div class="avatar">
+              <div class="sponsor-links">
                 <a href="https://twitter.com/besnappy" class="twitter-icon" target="_blank">@besnappy</a>
                 <img src="/img/lu-icon.png" class="lu-icon">
                 <a href="http://besnappy.com" class="link-icon" target="_blank">Website</a>
@@ -265,11 +278,11 @@ title: Home
           <figure class="sponsor">
             <div class="avatar">
               <div class="sponsor-links">
-                <a href="https://twitter.com/Noom" class="twitter-icon" target="_blank">@Noom</a>
+                <a href="https://twitter.com/AIGAUPSTNY" class="twitter-icon" target="_blank">@AIGAUPSTNY</a>
                 <img src="/img/lu-icon.png" class="lu-icon">
-                <a href="http://noom.com" class="link-icon" target="_blank">Website</a>
+                <a href="http://upstatenewyork.aiga.org" class="link-icon" target="_blank">Website</a>
               </div>
-              <img src="/img/noom-logo.png" alt="Snappy">
+              <img src="/img/aiga-upstate-ny-logo.png" alt="AIGA Upstate New York">
             </div>
           </figure>
         </li>
@@ -278,11 +291,11 @@ title: Home
           <figure class="sponsor">
             <div class="avatar">
               <div class="sponsor-links">
-                <a href="https://twitter.com/AIGAUPSTNY" class="twitter-icon" target="_blank">@AIGAUPSTNY</a>
+                <a href="https://twitter.com/Noom" class="twitter-icon" target="_blank">@Noom</a>
                 <img src="/img/lu-icon.png" class="lu-icon">
-                <a href="http://upstatenewyork.aiga.org" class="link-icon" target="_blank">Website</a>
+                <a href="http://noom.com" class="link-icon" target="_blank">Website</a>
               </div>
-              <img src="/img/aiga-upstate-ny-logo.png" alt="AIGA Upstate New York">
+              <img src="/img/noom-logo.png" alt="Snappy">
             </div>
           </figure>
         </li>
