--- a/index.html
+++ b/index.html
@@ -295,7 +295,20 @@ title: Home
                 <img src="/img/lu-icon.png" class="lu-icon">
                 <a href="http://noom.com" class="link-icon" target="_blank">Website</a>
               </div>
-              <img src="/img/noom-logo.png" alt="Snappy">
+              <img src="/img/noom-logo.png" alt="Noom">
+            </div>
+          </figure>
+        </li>
+
+        <li class="center">
+          <figure class="sponsor">
+            <div class="avatar">
+              <div class="sponsor-links">
+                <a href="https://twitter.com/Fingerpainters" class="twitter-icon" target="_blank">@Fingerpainters</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://fingerpaintmarketing.com" class="link-icon" target="_blank">Website</a>
+              </div>
+              <img src="/img/fingerpaint-logo.png" alt="Fingerpaint Marketing">
             </div>
           </figure>
         </li>
@@ -312,14 +325,14 @@ title: Home
             </div>
           </figure>
         </li>
-
+<!-- 
         <li class="center">
           <figure class="sponsor">
             <div class="avatar">
               <img src="/img/coming-soon-sponsor.png" alt="Coming Soon Sponsor">
             </div>
           </figure>
-        </li>
+        </li> -->
 
       </ul>
     </div>
