added speaker company logos

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@ title: Home
             <figcaption>Kevin Hoffman</figcaption>
             <figcaption class="speaker-title">Founder of Seven Heads Design</figcation>
           </figure>
+          <img src="/img/seven-heads-design.png" class="sponsor-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -113,6 +114,7 @@ title: Home
             <figcaption>Ian Landsman</figcaption>
             <figcaption class="speaker-title">Founder of UserScape</figcation>
           </figure>
+          <img src="/img/userscape.png" class="sponsor-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -128,6 +130,7 @@ title: Home
             <figcaption>Margot Bloomstein</figcaption>
             <figcaption class="speaker-title">Principal of Appropriate, Inc.</figcation>
           </figure>
+          <img src="/img/appropriate.png" class="sponsor-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -143,6 +146,7 @@ title: Home
             <figcaption>Henry Modisett</figcaption>
             <figcaption class="speaker-title">Product Designer at Quora</figcation>
           </figure>
+          <img src="/img/quora.png" class="sponsor-logo">
         </li>
         <br>
         <li class="center">
@@ -158,7 +162,9 @@ title: Home
             <br>
             <figcaption>PJ Mccormick</figcaption>
             <figcaption class="speaker-title">UX Design Lead at Amazon</figcation>
+
           </figure>
+          <img src="/img/amazon.png" class="sponsor-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -174,6 +180,7 @@ title: Home
             <figcaption>Andres Suarez</figcaption>
             <figcaption class="speaker-title">Frontend Engineer at SoundCloud</figcation>
           </figure>
+          <img src="/img/soundcloud.png" class="sponsor-logo">
         </li>
         <!-- <li class="center">
           <figure class="speaker">
