--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@ title: Home
 
 
 
-<div class="full-width speaker-section">
+<div class="full-width speaker-section" id="speakers">
   <div class="row">
     <div class="large-12 columns">
-      <h2>Speakers</h2>     
-      <a href="request-for-proposal" class="medium button button-center signup alt">Speaker RFP</a> 
+      <h2>Speakers</h2>
+      <a href="request-for-proposal" class="medium button button-center signup alt">Speaker RFP</a>
       <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
         <li class="center">
           <figure class="speaker">
@@ -177,7 +177,7 @@ title: Home
         </li>
         <!-- <li class="center">
           <figure class="speaker">
-            <div class="avatar blank"> 
+            <div class="avatar blank">
               <img src="/img/coming-soon.png" alt="Coming Soon!">
             </div>
             <br>
@@ -193,7 +193,7 @@ title: Home
   </div>
 
 
-  <div class="large-12 columns venue">
+  <div class="large-12 columns venue" id="venue">
     <div class="row">
       <h2>Venue</h2>
       <div class="medium-centered columns address">
@@ -203,7 +203,7 @@ title: Home
     </div>
   </div>
 
-  <div class="row">
+  <div class="row" id="sponsors">
     <div class="large-12 columns">
       <h2>Sponsors</h2>
       <a href="#" data-reveal-id="secondModal" class="medium button button-center signup alt">Sponsor Packet</a>
@@ -327,7 +327,7 @@ title: Home
 <br>
 <hr>
 
-  <div class="row">
+  <div class="row" id="about">
     <div class="large-12 columns">
       <h2>About</h2>
       <p class="lead">
