--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@ title: Home
 
 
 
-<div class="full-width speaker-section">
-  <div class="row">
+<div class="full-width speaker-section" id="speakers">
+  <div class="row" >
     <div class="large-12 columns">
       <h2>Speakers</h2>     
-      <a href="request-for-proposal" class="medium button button-center signup alt">Speaker RFP</a> 
+      <!-- <a href="request-for-proposal" class="medium button button-center signup alt">Speaker RFP</a>  -->
       <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
         <li class="center">
           <figure class="speaker">
@@ -200,7 +200,7 @@ title: Home
   </div>
 
 
-  <div class="large-12 columns venue">
+  <div class="large-12 columns venue" id="venue">
     <div class="row">
       <h2>Venue</h2>
       <div class="medium-centered columns address">
@@ -211,7 +211,7 @@ title: Home
   </div>
 
   <div class="row">
-    <div class="large-12 columns">
+    <div class="large-12 columns" id="sponsors">
       <h2>Sponsors</h2>
       <a href="#" data-reveal-id="secondModal" class="medium button button-center signup alt">Sponsor Packet</a>
       <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
@@ -347,7 +347,7 @@ title: Home
 <br>
 <hr>
 
-  <div class="row">
+  <div class="row" id="about">
     <div class="large-12 columns">
       <h2>About</h2>
       <p class="lead">
@@ -443,7 +443,7 @@ title: Home
 
         </div>
         <div class="large-4 medium-5 columns">
-          <a href="request-for-proposal" class="large button signup left alt">Speaker RFP</a>
+          <a href="request-for-proposal" data-reveal-id="firstModal" class="large button signup left">Keep me updated</a>
           <a href="#" data-reveal-id="secondModal" class="large button signup left alt">Sponsor Packet</a>
         </div>
 
