Bolded "more to come"

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@ title: Home
     </div>
     <br>
     <hr>
-    <h4>We'll let you get to know these six before releasing the next bunch.<br>More to come!</h4>
+    <br>
+    <h4>We'll let you get to know these six before releasing the next bunch.<br><strong>More to come!</strong></h4>
   </div>
 </div>
 
