Added Justin Searls

--- a/index.html
+++ b/index.html
@@ -182,7 +182,24 @@ title: Home
           </figure>
           <img src="/img/soundcloud.png" class="sponsor-logo">
         </li>
-        <!-- <li class="center">
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/searls" class="twitter-icon" target="_blank">@searls</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://testdouble.com" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/justin-searls.jpg" alt="Justin Searls">
+            </div>
+            <br>
+            <figcaption>Justin Searls</figcaption>
+            <figcaption class="speaker-title">Co-Founder at Test Double</figcaption>
+          </figure>
+          <img src="/img/testdouble.png" class="sponsor-logo" alt="Test Double">
+        </li>
+
+        <li class="center">
           <figure class="speaker">
             <div class="avatar blank">
               <img src="/img/coming-soon.png" alt="Coming Soon!">
@@ -191,7 +208,7 @@ title: Home
             <figcaption>TBA</figcaption>
             <figcaption class="speaker-title">Level Up Speaker</figcaption>
           </figure>
-        </li> -->
+        </li>
       </ul>
     </div>
     <br>
