--- a/index.html
+++ b/index.html
@@ -201,6 +201,58 @@ title: Home
 
         <li class="center">
           <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/innerspaeth" class="twitter-icon" target="_blank">@innerspaeth</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://citizencreative.com" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/jill-spaeth.jpg" alt="Jill Spaeth">
+            </div>
+            <br>
+            <figcaption>Jill Spaeth</figcaption>
+            <figcaption class="speaker-title">President &amp; Dir. of Design at Citizen Creative</figcaption>
+          </figure>
+          <img src="/img/citizens-creative-logo.png" class="sponsor-logo" alt="Citizens Creative">
+        </li>
+
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/saouderkirk" class="twitter-icon" target="_blank">@saouderkirk</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://ouderkirk.co" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/simon-ouderkirk.jpg" alt="Simon Ouderkirk">
+            </div>
+            <br>
+            <figcaption>Simon Ouderkirk</figcaption>
+            <figcaption class="speaker-title">Happiness Engineer at Automattic</figcaption>
+          </figure>
+          <img src="/img/automattic-logo.png" class="sponsor-logo" alt="Automattic">
+        </li>
+
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/dllh" class="twitter-icon" target="_blank">@dllh</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://daryl.learnhouston.com" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/daryl-houston.jpg" alt="Daryl Houston">
+            </div>
+            <br>
+            <figcaption>Simon Ouderkirk</figcaption>
+            <figcaption class="speaker-title">Happiness Gardener at Automattic</figcaption>
+          </figure>
+          <img src="/img/automattic-logo.png" class="sponsor-logo" alt="Automattic">
+        </li>
+        
+
+        <li class="center">
+          <figure class="speaker">
             <div class="avatar blank">
               <img src="/img/coming-soon.png" alt="Coming Soon!">
             </div>
@@ -341,6 +393,18 @@ title: Home
               <a href="http://fingerpaintmarketing.com" class="link-icon" target="_blank">Website</a>
             </div>
             <img src="/img/fingerpaint-logo.png" alt="Fingerpaint Marketing">
+          </div>
+        </figure>
+      </li>
+      <li class="center">
+        <figure class="sponsor">
+          <div class="avatar">
+            <div class="sponsor-links">
+              <a href="https://twitter.com/Apprenda" class="twitter-icon" target="_blank">@Apprenda</a>
+              <img src="/img/lu-icon.png" class="lu-icon">
+              <a href="http://apprenda.com" class="link-icon" target="_blank">Website</a>
+            </div>
+            <img src="/img/apprenda-logo.png" alt="Apprenda">
           </div>
         </figure>
       </li>
