--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@ title: Home
 <div> <!--This is the container div for speaker and signup forms (aka modal 2 and 3)-->
   <!-- Sign up modal form -->
   <div id="firstModal" class="reveal-modal small" data-reveal class="fixedToTo">
-    <h3><strong>The early bird gets the worm.</strong></h3>
+    <h3><strong>Stay Informed on All Things Level Up</strong></h3>
     <br>
-    <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay
-      updated – that way, you'll be the first to know when registration opens.
+    <p>If you haven't already grabbed an Attendee Badge, but want to catch 
+        announcements on new speakers, sponsors and Level Up chatter... Here's your
+        chance! Sign-up now to stay updated leading up to October 8th.
     </p>
     <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
 
@@ -42,7 +43,8 @@ title: Home
   <div id="secondModal" class="reveal-modal small" data-reveal>
     <h3><strong>Sponsor Packet</strong></h3>
     <br>
-    <p>A sponsor packet for <strong>Level Up</strong> is currently in the works. In the meantime, sign up to let us know that you're interested - when we finalize the details, you'll be the first we contact.</p>
+    <p>Interested in becoming a sponsor for Level Up? Complete the information below and 
+      we'll be in touch! We couldn't host this without your support.</p>
     <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
 
 
