--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ title: Home
     <br>
     <hr>
     <br>
-    <h4>We'll let you get to know these six before releasing the next bunch.<br><strong>More to come!</strong></h4>
+    <h4>We'll let you get to know these ten before releasing the next bunch.<br><strong>More to come!</strong></h4>
   </div>
 </div>
 
