--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ title: Home
               <img src="/img/daryl-houston.jpg" alt="Daryl Houston">
             </div>
             <br>
-            <figcaption>Simon Ouderkirk</figcaption>
+            <figcaption>Daryl Houston</figcaption>
             <figcaption class="speaker-title">Happiness Gardener at Automattic</figcaption>
           </figure>
           <img src="/img/automattic-logo.png" class="sponsor-logo" alt="Automattic">
