Fixed issue with adblock

--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@ title: Home
     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="http://twitter.com/mandrillapp" class="twitter-icon" target="_blank">@mandrillapp</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://mandrill.com" class="link-icon" target="_blank">Website</a>
@@ -308,9 +308,9 @@ title: Home
       </li>
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="https://twitter.com/WarnerBrosEnt" class="twitter-icon" target="_blank">@WarnerBrosEnt</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://www.warnerbros.com" class="link-icon" target="_blank">Website</a>
@@ -321,9 +321,9 @@ title: Home
       </li>
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="https://twitter.com/turbine" class="twitter-icon" target="_blank">@turbine</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://www.turbine.com" class="link-icon" target="_blank">Website</a>
@@ -334,9 +334,9 @@ title: Home
       </li>
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="https://twitter.com/nvite" class="twitter-icon" target="_blank">@nvite</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://nvite.com" class="link-icon" target="_blank">Website</a>
@@ -347,9 +347,9 @@ title: Home
       </li>
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="https://twitter.com/besnappy" class="twitter-icon" target="_blank">@besnappy</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://besnappy.com" class="link-icon" target="_blank">Website</a>
@@ -361,9 +361,9 @@ title: Home
 
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="https://twitter.com/AIGAUPSTNY" class="twitter-icon" target="_blank">@AIGAUPSTNY</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://upstatenewyork.aiga.org" class="link-icon" target="_blank">Website</a>
@@ -374,9 +374,9 @@ title: Home
       </li>
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="https://twitter.com/Noom" class="twitter-icon" target="_blank">@Noom</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://noom.com" class="link-icon" target="_blank">Website</a>
@@ -387,9 +387,9 @@ title: Home
       </li>
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="https://twitter.com/Fingerpainters" class="twitter-icon" target="_blank">@Fingerpainters</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://fingerpaintmarketing.com" class="link-icon" target="_blank">Website</a>
@@ -399,9 +399,9 @@ title: Home
         </figure>
       </li>
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links">
+            <div class="supporters-links">
               <a href="https://twitter.com/Apprenda" class="twitter-icon" target="_blank">@Apprenda</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://apprenda.com" class="link-icon" target="_blank">Website</a>
@@ -412,9 +412,9 @@ title: Home
       </li>
 
       <li class="center">
-        <figure class="sponsor">
+        <figure class="supporters">
           <div class="avatar">
-            <div class="sponsor-links none">
+            <div class="supporters-links none">
               <!-- <a href="" class="twitter-icon" target="_blank"></a> -->
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://www.inoc.net" class="link-icon" target="_blank">Website</a>
@@ -426,9 +426,9 @@ title: Home
 
       <!--
         <li class="center">
-          <figure class="sponsor">
+          <figure class="supporters">
             <div class="avatar">
-              <img src="/img/coming-soon-sponsor.png" alt="Coming Soon Sponsor">
+              <img src="/img/coming-soon-supporters.png" alt="Coming Soon Sponsor">
             </div>
           </figure>
         </li>
