Fixed another issue with adblock

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ title: Home
             <figcaption>Kevin Hoffman</figcaption>
             <figcaption class="speaker-title">Founder of Seven Heads Design</figcaption>
           </figure>
-          <img src="/img/seven-heads-design.png" class="sponsor-logo">
+          <img src="/img/seven-heads-design.png" class="supporters-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -117,7 +117,7 @@ title: Home
             <figcaption>Ian Landsman</figcaption>
             <figcaption class="speaker-title">Founder of UserScape</figcaption>
           </figure>
-          <img src="/img/userscape.png" class="sponsor-logo">
+          <img src="/img/userscape.png" class="supporters-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -133,7 +133,7 @@ title: Home
             <figcaption>Margot Bloomstein</figcaption>
             <figcaption class="speaker-title">Principal of Appropriate, Inc.</figcaption>
           </figure>
-          <img src="/img/appropriate.png" class="sponsor-logo">
+          <img src="/img/appropriate.png" class="supporters-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -149,7 +149,7 @@ title: Home
             <figcaption>Henry Modisett</figcaption>
             <figcaption class="speaker-title">Product Designer at Quora</figcaption>
           </figure>
-          <img src="/img/quora.png" class="sponsor-logo">
+          <img src="/img/quora.png" class="supporters-logo">
         </li>
         <br>
         <li class="center">
@@ -166,7 +166,7 @@ title: Home
             <figcaption>PJ Mccormick</figcaption>
             <figcaption class="speaker-title">UX Design Lead at Amazon</figcaption>
           </figure>
-          <img src="/img/amazon.png" class="sponsor-logo">
+          <img src="/img/amazon.png" class="supporters-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -182,7 +182,7 @@ title: Home
             <figcaption>Andres Suarez</figcaption>
             <figcaption class="speaker-title">Frontend Engineer at SoundCloud</figcaption>
           </figure>
-          <img src="/img/soundcloud.png" class="sponsor-logo">
+          <img src="/img/soundcloud.png" class="supporters-logo">
         </li>
         <li class="center">
           <figure class="speaker">
@@ -198,7 +198,7 @@ title: Home
             <figcaption>Justin Searls</figcaption>
             <figcaption class="speaker-title">Co-Founder at Test Double</figcaption>
           </figure>
-          <img src="/img/testdouble.png" class="sponsor-logo" alt="Test Double">
+          <img src="/img/testdouble.png" class="supporters-logo" alt="Test Double">
         </li>
 
         <li class="center">
@@ -215,7 +215,7 @@ title: Home
             <figcaption>Jill Spaeth</figcaption>
             <figcaption class="speaker-title">President &amp; Dir. of Design at Citizen Creative</figcaption>
           </figure>
-          <img src="/img/citizens-creative-logo.png" class="sponsor-logo" alt="Citizens Creative">
+          <img src="/img/citizens-creative-logo.png" class="supporters-logo" alt="Citizens Creative">
         </li>
 
         <li class="center">
@@ -232,7 +232,7 @@ title: Home
             <figcaption>Simon Ouderkirk</figcaption>
             <figcaption class="speaker-title">Happiness Engineer at Automattic</figcaption>
           </figure>
-          <img src="/img/automattic-logo.png" class="sponsor-logo" alt="Automattic">
+          <img src="/img/automattic-logo.png" class="supporters-logo" alt="Automattic">
         </li>
 
         <li class="center">
@@ -249,7 +249,7 @@ title: Home
             <figcaption>Daryl Houston</figcaption>
             <figcaption class="speaker-title">Happiness Gardener at Automattic</figcaption>
           </figure>
-          <img src="/img/automattic-logo.png" class="sponsor-logo" alt="Automattic">
+          <img src="/img/automattic-logo.png" class="supporters-logo" alt="Automattic">
         </li>
         
 
