--- a/index.html
+++ b/index.html
@@ -222,6 +222,23 @@ title: Home
           <figure class="speaker">
             <div class="avatar">
               <div class="speaker-links">
+                <a href="https://twitter.com/PatrickAmbron" class="twitter-icon" target="_blank">@PatrickAmbron</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://patrickambron.brandyourself.com" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/patrick-ambron.jpg" alt="Patrick Ambron">
+            </div>
+            <br>
+            <figcaption>Patrick Ambron</figcaption>
+            <figcaption class="speaker-title">Co-founder &amp; CEO of BrandYourself</figcaption>
+          </figure>
+          <img src="/img/brandyourself.png" class="supporters-logo" alt="BrandYourself">
+        </li>
+
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
                 <a href="https://twitter.com/saouderkirk" class="twitter-icon" target="_blank">@saouderkirk</a>
                 <img src="/img/lu-icon.png" class="lu-icon">
                 <a href="http://ouderkirk.co" class="link-icon" target="_blank">Website</a>
@@ -420,6 +437,19 @@ title: Home
               <a href="http://www.inoc.net" class="link-icon" target="_blank">Website</a>
             </div>
             <img src="/img/inoc-logo.png" alt="Independent Network Operations Consortium">
+          </div>
+        </figure>
+      </li>
+
+      <li class="center">
+        <figure class="supporters">
+          <div class="avatar">
+            <div class="supporters-links">
+              <a href="https://twitter.com/pinnacle_jobs" class="twitter-icon" target="_blank">@Pinnacle_Jobs</a>
+              <img src="/img/lu-icon.png" class="lu-icon">
+              <a href="http://www.pinnaclerecruiters.com" class="link-icon" target="_blank">Website</a>
+            </div>
+            <img src="/img/pinnacle-logo.png" alt="Pinnacle">
           </div>
         </figure>
       </li>
