--- a/index.html
+++ b/index.html
@@ -368,6 +368,19 @@ title: Home
         <figure class="supporters">
           <div class="avatar">
             <div class="supporters-links">
+              <a href="https://twitter.com/CommerceHub" class="twitter-icon" target="_blank">@CommerceHub</a>
+              <img src="/img/lu-icon.png" class="lu-icon">
+              <a href="http://www.commercehub.com" class="link-icon" target="_blank">Website</a>
+            </div>
+            <img src="/img/commercehub-logo.png" alt="CommerceHub">
+          </div>
+        </figure>
+      </li>
+
+      <li class="center">
+        <figure class="supporters">
+          <div class="avatar">
+            <div class="supporters-links">
               <a href="https://twitter.com/WarnerBrosEnt" class="twitter-icon" target="_blank">@WarnerBrosEnt</a>
               <img src="/img/lu-icon.png" class="lu-icon">
               <a href="http://www.warnerbros.com" class="link-icon" target="_blank">Website</a>
