adds bit.ly link for hampton inn

--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@ title: Home
       <div class="medium-6 columns">
         <p><strong>The Saratoga Springs Hampton Inn and Suites</strong>
         <br>25 Lake Ave, Saratoga Springs, NY 12866 
-        <br>To Book a Room here, call 518-584-2100 and mention Level Up Conference.</p>
+        <br>To Book a Room here, call 518-584-2100 and mention Level Up Conference.
+          <br><a href="http://bit.ly/hamptoninnlevelup">Hotel Details</a></p>
         
         <p><strong>The Saratoga Hilton</strong>
         <br>534 Broadway, Saratoga Springs, NY 12866
