--- a/index.html
+++ b/index.html
@@ -285,6 +285,23 @@ title: Home
           </figure>
           <img src="/img/nvite.png" class="supporters-logo" alt="nvite">
         </li>
+
+        <li class="center">
+          <figure class="speaker">
+            <div class="avatar">
+              <div class="speaker-links">
+                <a href="https://twitter.com/craigkerstiens" class="twitter-icon" target="_blank">@craigkerstiens</a>
+                <img src="/img/lu-icon.png" class="lu-icon">
+                <a href="http://www.craigkerstiens.com/" class="link-icon" target="_blank">Website</a>
+            </div>
+              <img src="/img/craig-kersteins.jpg" alt="Craig Kersteins">
+            </div>
+            <br>
+            <figcaption>Craig Kersteins</figcaption>
+            <figcaption class="speaker-title">Part of the team at Heroku</figcaption>
+          </figure>
+          <img src="/img/heroku-logo.png" class="supporters-logo" alt="Heroku">
+        </li>
         
 
         <!-- <li class="center">
